--- a/index.html
+++ b/index.html
@@ -29,18 +29,32 @@
         <p>You <span class="em">know</span> you want to.</p>
         <form action="post">
             <h2>Let's do this!</h2>
-            <label for="fname">First Name</label>
-            <input type="text" id="fname" placeholder="John Doe">
-            <label for="lname">Last Name</label>
-            <input type="text" id="lname" placeholder="Doe">
-            <label for="email">Email</label>
-            <input type="email" id="email">
-            <label for="phone">Phone Number</label>
-            <input type="tel" id="phone">
-            <label for="pass">Password</label>
-            <input type="password" name="pass" id="pass">
-            <label for="cpass">Confirm Password</label>
-            <input type="password" name="cpass" id="cpass">
+                <div class="form-content">
+                    <div class="form-input">
+                        <label for="fname">First Name</label>
+                        <input type="text" id="fname" placeholder="John Doe">
+                    </div>
+                    <div class="form-input">
+                        <label for="lname">Last Name</label>
+                        <input type="text" id="lname" placeholder="Doe">
+                    </div>
+                        <div class="form-input">
+                        <label for="email">Email</label>
+                        <input type="email" id="email">
+                    </div>
+                        <div class="form-input">
+                        <label for="phone">Phone Number</label>
+                        <input type="tel" id="phone">
+                    </div>
+                        <div class="form-input">
+                        <label for="pass">Password</label>
+                        <input type="password" name="pass" id="pass">
+                    </div>
+                        <div class="form-input">
+                        <label for="cpass">Confirm Password</label>
+                        <input type="password" name="cpass" id="cpass">
+                    </div>
+                </div>  
         </form>
         <button>Create Account</button>
         <p>Already have an account? <a href="#">Log in</a></p>
