--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <main>
         <p>This is not a real online service! You know you need something like this in your life to help you realize your deepest dreams. Sign up <span class="em">now</span> to get started.</p>
         <p>You <span class="em">know</span> you want to.</p>
-        <form action="post">
+        <form action="post" id="form">
             <h2>Let's do this!</h2>
                 <div class="form-content">
                     <div class="form-input">
@@ -55,8 +55,9 @@
                         <input type="password" name="cpass" id="cpass">
                     </div>
                 </div>  
+                <button>Create Account</button>
         </form>
-        <button>Create Account</button>
+
         <p>Already have an account? <a href="#">Log in</a></p>
     </main>
 </body>
