Connect script.js

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Orbitron:wght@700&family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="style.css">
-
+<script src="script.js" defer></script>
     <title>Sign-Up Form</title>
 </head>
 <body>
@@ -48,11 +48,13 @@
                     </div>
                         <div class="form-input">
                         <label for="pass">Password</label>
-                        <input type="password" name="pass" id="pass">
+                        <input 
+                        class="password" type="password" name="pass" id="pass">
                     </div>
                         <div class="form-input">
                         <label for="cpass">Confirm Password</label>
-                        <input type="password" name="cpass" id="cpass">
+                        <input 
+                        class="password" type="password" name="cpass" id="cpass">
                     </div>
                 </div>  
                 <button>Create Account</button>
